--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "2.6"
   - "2.7"
 install:
-  - pip install --user -r requirements.txt
+  - pip install -r requirements.txt
+sudo: required
 # command to run tests
 script: python -m unittest -v test.test_servo
