use unittest discover

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   - pip install ez_setup
   - pip install -r requirements.txt
 # command to run tests
-script: python -m unittest -v test.test_servo
+script: python -m unittest discover -v -s test
