--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script: python -m unittest discover -v -s test
+notifications:
+  webhooks:
+    urls:
+      - pup.haus/travisci/notifications
